optimize business search with 200k
