# storage/api-docs/api-docs.yaml
@@ -406,6 +406,13 @@ paths:
       responses:
         200:
           description: 'Geo Data JSON filestream'
+  /nova-vendor/mapbox/business-draw:
+    get:
+      summary: 'Fetch GEO Json for businesses'
+      operationId: 'App\Http\Controllers\API\v1\BusinessesController::fetchJson'
+      responses:
+        200:
+          description: 'Geo Data JSON filestream'
   '/api/v1/businesses/{id}':
     get:
       summary: 'Get a single business by ID'
